it's better with 'fab' ('FAB' was only for tests of package-new.php sorry)
git-svn-id: http://svn.php.net/repository/pear/packages/Cache_Lite/trunk@91280 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 uses file locking and/or anti-corruption tests).</description>
   <maintainers>
     <maintainer>
-      <user>FAB</user>
+      <user>fab</user>
       <name>Fabien MARTY</name>
       <email>fab@php.net</email>
       <role>lead</role>
