--- a/package.xml
+++ b/package.xml
@@ -2,8 +2,9 @@
 <package version="1.0">
   <name>Cache_Lite</name>
   <summary>Fast and Safe little cache system</summary>
-  <description>This package is a little cache system optimized for file containers. It is fast and safe (because it
-uses file locking and/or anti-corruption tests).</description>
+  <description>
+    This package is a little cache system optimized for file containers. It is fast and safe (because it uses file locking and/or anti-corruption tests).
+  </description>
   <maintainers>
     <maintainer>
       <user>fab</user>
