--- a/package.xml
+++ b/package.xml
@@ -168,7 +168,7 @@
       - Add '$doNotTestCacheValidity' optional parameter for the get() method
       Changes :
       - raiseError() method becomes public
-      - swap of two lines in _write() method (Thanks to Jean-François BUSTARRET)
+      - swap of two lines in _write() method (Thanks to Jean-Francois BUSTARRET)
       Bugs fixed :
       - remove blank spaces at the end of the class (Thanks to Jean-François BUSTARRET)
       - E_NOTICEs problems and maybe a minor bug of errors management (Thanks to Sebastian BERGMANN)
