Bug #3621  	CRITICAL: non-ISO-8859-1 characters in package.xml must be entitied (again)
git-svn-id: http://svn.php.net/repository/pear/packages/Cache_Lite/trunk@181122 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -170,7 +170,7 @@
       - raiseError() method becomes public
       - swap of two lines in _write() method (Thanks to Jean-Francois BUSTARRET)
       Bugs fixed :
-      - remove blank spaces at the end of the class (Thanks to Jean-François BUSTARRET)
+      - remove blank spaces at the end of the class (Thanks to Jean-Francois BUSTARRET)
       - E_NOTICEs problems and maybe a minor bug of errors management (Thanks to Sebastian BERGMANN)
     </notes>
    </release>
