--- a/package.xml
+++ b/package.xml
@@ -14,22 +14,13 @@
      </maintainer>
   </maintainers>
   <release>
-    <version>1.5.0</version>
-    <date>2005-06-18</date>
+   <version>1.5.0</version>
+    <date>2005-07-10</date>
     <license>lgpl</license>
-    <state>beta</state>
+    <state>stable</state>
     <notes>
-      New features :
-      - add of a doNotTestCacheValidity in Output (like in Lite.php)
-      - request #4502 : better control on cache cleaning condition (thanks to 
-      vincent lascaux); introduce the idea of a user callback for the 
-      cleaning process
-      - new Cache_Lite_File module (for a cache controlled by a master file, 
-      very usefull for templates or config caching)
-      Bug fixed :
-      - avoid a potential error message if cache doesn't exist
-      - bug #4236 : fread PHP warning on zero length read (because of the change
-      of fread() behaviour in PHP) (thanks to rick dot overman at gmail dot com)
+      Changes :
+      - juste a little more docs since 1.5.0beta
     </notes>
     <filelist>
       <dir name="/" baseinstalldir="Cache">
@@ -55,8 +46,27 @@
         <file role="doc">TODO</file>
       </dir>
     </filelist>
-  </release>  
+  </release>
   <changelog>
+    <release>
+     <version>1.5.0</version>
+     <date>2005-06-18</date>
+     <license>lgpl</license>
+     <state>beta</state>
+     <notes>
+       New features :
+       - add of a doNotTestCacheValidity in Output (like in Lite.php)
+       - request #4502 : better control on cache cleaning condition (thanks to 
+       vincent lascaux); introduce the idea of a user callback for the 
+       cleaning process
+       - new Cache_Lite_File module (for a cache controlled by a master file, 
+       very usefull for templates or config caching)
+       Bug fixed :
+       - avoid a potential error message if cache doesn't exist
+       - bug #4236 : fread PHP warning on zero length read (because of the change
+       of fread() behaviour in PHP) (thanks to rick dot overman at gmail dot com)
+     </notes>
+    </release>  
     <release>
      <version>1.4.1</version>
      <date>2005-03-01</date>
