--- a/package.xml
+++ b/package.xml
@@ -14,13 +14,14 @@
      </maintainer>
   </maintainers>
   <release>
-   <version>1.5.0</version>
+   <version>1.5.1</version>
     <date>2005-07-10</date>
     <license>lgpl</license>
     <state>stable</state>
     <notes>
       Changes :
-      - juste a little more docs since 1.5.0beta
+      - juste a little more docs since 1.5.0 (beta)
+      - the state in "stable" now
     </notes>
     <filelist>
       <dir name="/" baseinstalldir="Cache">
